--- a/src/app/anuncios/anuncios.component.css
+++ b/src/app/anuncios/anuncios.component.css
@@ -1,9 +1,20 @@
-.card-group {
-  display: flex;
-  flex-wrap: wrap;
+.card {
+  min-width: 18rem;
+  max-width: 22rem;
 }
 
-.card {
-  min-width: 20rem;
-  max-width: 20rem;
+h1 {
+  text-align: center;
+  margin: 20px;
+}
+
+.form-group input {
+  width: 100%;
+}
+
+.card-columns {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
