--- a/src/app/anuncios/anuncios.component.css
+++ b/src/app/anuncios/anuncios.component.css
@@ -1,11 +1,20 @@
 .card {
   min-width: 18rem;
   max-width: 22rem;
+  margin-bottom: 2rem;
 }
 
 h1 {
   text-align: center;
   margin: 20px;
+}
+
+p {
+  margin-bottom: 1rem;
+}
+
+h5 {
+  margin-bottom: 1rem;
 }
 
 .form-group input {
@@ -17,4 +26,8 @@ h1 {
   justify-content: space-between;
   flex-direction: row;
   flex-wrap: wrap;
+}
+
+h1, h2, h3, h4, h5, p, div, form, input, label {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
